# OpenRGB_Pico_Controller

./: .gitignore  DRC.rpt  LICENSE  README.md  RGB_PICO_SATA_CONTROLLER.kicad_pcb  RGB_PICO_SATA_CONTROLLER.kicad_prl  RGB_PICO_SATA_CONTROLLER.kicad_pro  RGB_PICO_SATA_CONTROLLER.kicad_sch
Firmware/: CMakeLists.txt  main.c  openrgb_protocol.c  openrgb_protocol.h  pin_mapping.txt  schematic_netlist.txt  tusb_config.h  usb_descriptors.c
Gerber/: RGB_PICO_SATA_CONTROLLER-NPTH.drl  RGB_PICO_SATA_CONTROLLER-PTH.drl
